--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -15,13 +15,13 @@
     "defaultMessage": "Try now",
     "description": "Continue Playing button"
   },
-  "/EsQT0": {
-    "defaultMessage": "This is games page",
-    "description": "Games Page"
-  },
   "/Gy7qZ": {
     "defaultMessage": "Level {levelNumber}",
     "description": "Level indicator"
+  },
+  "/Id/lz": {
+    "defaultMessage": "Yes",
+    "description": "logout"
   },
   "/dnxym": {
     "defaultMessage": "Create a New Account",
@@ -178,6 +178,10 @@
     "defaultMessage": "Coming Soon...",
     "description": "Challenges Page"
   },
+  "9BVOVU": {
+    "defaultMessage": "Please verify to continue",
+    "description": "Recaptcha Modal heading"
+  },
   "9NID4X": {
     "defaultMessage": "OK",
     "description": "OK"
@@ -230,6 +234,10 @@
     "defaultMessage": "Try again",
     "description": "try again btn"
   },
+  "BDYnsl": {
+    "defaultMessage": "WebKata - HTML",
+    "description": "Webkata title"
+  },
   "BNGdt+": {
     "defaultMessage": "No",
     "description": "cancel logout"
@@ -241,6 +249,10 @@
   "CcB4fo": {
     "defaultMessage": "Coins Earned:",
     "description": "Coins Earned"
+  },
+  "CfsqV9": {
+    "defaultMessage": "All Games",
+    "description": "Games Page"
   },
   "Ciol6I": {
     "defaultMessage": "Output",
@@ -285,6 +297,10 @@
   "FhTUgw": {
     "defaultMessage": "Not {phone} ?",
     "description": "not button"
+  },
+  "Fl1ECE": {
+    "defaultMessage": "Level {level}",
+    "description": "Level navigation link"
   },
   "FoTGQE": {
     "defaultMessage": "Go to Login",
@@ -553,6 +569,10 @@
     "defaultMessage": "Please login again",
     "description": "Not authorized message"
   },
+  "XfY3VU": {
+    "defaultMessage": "WebKata - HTML",
+    "description": "webkata title"
+  },
   "Y+dh5z": {
     "defaultMessage": "Edit Profile",
     "description": "Home card menu"
@@ -643,6 +663,10 @@
   "f1vl6A": {
     "defaultMessage": "Show Leaderboard",
     "description": "show leaderboard"
+  },
+  "fAOneF": {
+    "defaultMessage": "Learn to code while drawing, and code along to see the output right on your screens. Everyone draws to express themselves the best! Why not channelize that to learn?",
+    "description": "WebKata description"
   },
   "fOZCSk": {
     "defaultMessage": "Set a Password",
@@ -767,6 +791,10 @@
     "defaultMessage": "Account Settings",
     "description": "more menu button"
   },
+  "oDenEU": {
+    "defaultMessage": "Turtle",
+    "description": "Turtle Game Title"
+  },
   "oOZkkL": {
     "defaultMessage": "Coming Soon...",
     "description": "Class Page"
@@ -783,13 +811,13 @@
     "defaultMessage": "Game Progress",
     "description": "Game Progress card heading"
   },
-  "q86PwV": {
-    "defaultMessage": "Go to Home",
-    "description": "Home Navigation Button"
-  },
   "qTQ8nP": {
     "defaultMessage": "{coinsEarned}",
     "description": "Coins Earned"
+  },
+  "qUU2pp": {
+    "defaultMessage": "All Games",
+    "description": "Section Title"
   },
   "qXTiEd": {
     "defaultMessage": "Grade"
@@ -841,10 +869,6 @@
   "vY562d": {
     "defaultMessage": "Try the new in-built IDE",
     "description": "more card title"
-  },
-  "viQX0N": {
-    "defaultMessage": "Turtle",
-    "description": "Game Title"
   },
   "viQX0N": {
     "defaultMessage": "Turtle",
