--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -15,17 +15,21 @@
     "defaultMessage": "Try now",
     "description": "Continue Playing button"
   },
-  "/EsQT0": {
-    "defaultMessage": "This is games page",
-    "description": "Games Page"
-  },
   "/Gy7qZ": {
     "defaultMessage": "Level {levelNumber}",
     "description": "Level indicator"
   },
+  "/Id/lz": {
+    "defaultMessage": "Yes",
+    "description": "logout"
+  },
   "/dnxym": {
     "defaultMessage": "Create a New Account",
     "description": "create new account button"
+  },
+  "/hlsbq": {
+    "defaultMessage": "Approval Pending",
+    "description": "Approval Pending"
   },
   "/itreP": {
     "defaultMessage": "{label}",
@@ -114,6 +118,10 @@
     "defaultMessage": "Login with Phone",
     "description": "Login with Phone tab"
   },
+  "3NDGt2": {
+    "defaultMessage": "#{rank}",
+    "description": "club leaderboard rank"
+  },
   "3Wcqsy": {
     "defaultMessage": "Next",
     "description": "Next button"
@@ -121,6 +129,10 @@
   "3lLFC/": {
     "defaultMessage": "{label}",
     "description": "{description}"
+  },
+  "47yCiv": {
+    "defaultMessage": "#{rank}",
+    "description": "club rank"
   },
   "4Ve1r3": {
     "defaultMessage": "Ok",
@@ -138,6 +150,10 @@
     "defaultMessage": "Rank",
     "description": "Rank table cell header"
   },
+  "59GDNx": {
+    "defaultMessage": "Members",
+    "description": "Members"
+  },
   "5EmC6p": {
     "defaultMessage": "Student Name",
     "description": "Student Name"
@@ -149,6 +165,13 @@
   "634LIC": {
     "defaultMessage": "PLAY",
     "description": "Play button"
+  },
+  "64+NBp": {
+    "defaultMessage": "About Club"
+  },
+  "66xp/7": {
+    "defaultMessage": "{coins} coins",
+    "description": "club coins"
   },
   "6Cjk2D": {
     "defaultMessage": "Login",
@@ -177,6 +200,10 @@
   "8R6f04": {
     "defaultMessage": "Coming Soon...",
     "description": "Challenges Page"
+  },
+  "9BVOVU": {
+    "defaultMessage": "Please verify to continue",
+    "description": "Recaptcha Modal heading"
   },
   "9NID4X": {
     "defaultMessage": "OK",
@@ -242,6 +269,10 @@
     "defaultMessage": "Coins Earned:",
     "description": "Coins Earned"
   },
+  "CfsqV9": {
+    "defaultMessage": "All Games",
+    "description": "Games Page"
+  },
   "Ciol6I": {
     "defaultMessage": "Output",
     "description": "Output"
@@ -282,9 +313,17 @@
     "defaultMessage": "Home",
     "description": "home heading"
   },
+  "FbQ6xD": {
+    "defaultMessage": "You are not a part of any club right now!",
+    "description": "Non club member text"
+  },
   "FhTUgw": {
     "defaultMessage": "Not {phone} ?",
     "description": "not button"
+  },
+  "Fl1ECE": {
+    "defaultMessage": "Level {level}",
+    "description": "Level navigation link"
   },
   "FoTGQE": {
     "defaultMessage": "Go to Login",
@@ -293,6 +332,10 @@
   "G0AqB8": {
     "defaultMessage": "Login into Existing Account",
     "description": "Login into Exisiting Account button"
+  },
+  "G70f+S": {
+    "defaultMessage": "Join this Club",
+    "description": "Join Club"
   },
   "GQwBTI": {
     "defaultMessage": "Verify OTP and proceed",
@@ -312,6 +355,10 @@
   "HI8bPV": {
     "defaultMessage": "Save",
     "description": "Profile save button"
+  },
+  "HLIDfo": {
+    "defaultMessage": "Join a club",
+    "description": "Join a club button"
   },
   "Hjj2+R": {
     "defaultMessage": "Register to Get help from Turtle",
@@ -356,6 +403,10 @@
   "MS/biV": {
     "defaultMessage": "Go to Index",
     "description": "Link description"
+  },
+  "MceYzq": {
+    "defaultMessage": "{name}",
+    "description": "club leaderboard name"
   },
   "MfoF60": {
     "defaultMessage": "{hint}",
@@ -457,6 +508,10 @@
     "defaultMessage": "{errorMessage}",
     "description": "phoneNumber form helper"
   },
+  "SqEWSv": {
+    "defaultMessage": "{name}",
+    "description": "club name"
+  },
   "T/sbBG": {
     "defaultMessage": "Level {level}",
     "description": "Question Level"
@@ -493,6 +548,10 @@
     "defaultMessage": "Edit",
     "description": "edit profile"
   },
+  "UXpv/F": {
+    "defaultMessage": "{membersCount}",
+    "description": "club members count"
+  },
   "UkT6PM": {
     "defaultMessage": "You have completed this level !",
     "description": "Success message"
@@ -520,6 +579,10 @@
   "VoYGmQ": {
     "defaultMessage": "Practise... or play with the new code editor",
     "description": "More card Subtitle"
+  },
+  "VpTQ5s": {
+    "defaultMessage": "{coins}",
+    "description": "club coins"
   },
   "VsWMVt": {
     "defaultMessage": "Re-type password",
@@ -552,6 +615,10 @@
   "XQ/d5T": {
     "defaultMessage": "Please login again",
     "description": "Not authorized message"
+  },
+  "XbaAun": {
+    "defaultMessage": "Browse clubs:",
+    "description": "Browse clubs heading"
   },
   "Y+dh5z": {
     "defaultMessage": "Edit Profile",
@@ -651,6 +718,10 @@
   "fT7uau": {
     "defaultMessage": "completed"
   },
+  "fUu1sR": {
+    "defaultMessage": "Club Rank",
+    "description": "Club Rank"
+  },
   "fr893W": {
     "defaultMessage": "{validSubmissions}",
     "description": "Valid Submissions"
@@ -670,6 +741,10 @@
   "gOkIvb": {
     "defaultMessage": "Name",
     "description": "Name label"
+  },
+  "gYpthg": {
+    "defaultMessage": "More",
+    "description": "More"
   },
   "hEqp4d": {
     "defaultMessage": "Coming Soon...",
@@ -767,6 +842,10 @@
     "defaultMessage": "Account Settings",
     "description": "more menu button"
   },
+  "oDenEU": {
+    "defaultMessage": "Turtle",
+    "description": "Turtle Game Title"
+  },
   "oOZkkL": {
     "defaultMessage": "Coming Soon...",
     "description": "Class Page"
@@ -783,16 +862,20 @@
     "defaultMessage": "Game Progress",
     "description": "Game Progress card heading"
   },
-  "q86PwV": {
-    "defaultMessage": "Go to Home",
-    "description": "Home Navigation Button"
-  },
   "qTQ8nP": {
     "defaultMessage": "{coinsEarned}",
     "description": "Coins Earned"
   },
+  "qUU2pp": {
+    "defaultMessage": "All Games",
+    "description": "Section Title"
+  },
   "qXTiEd": {
     "defaultMessage": "Grade"
+  },
+  "qZyJyg": {
+    "defaultMessage": "#{rank} rank",
+    "description": "club rank"
   },
   "quRCCv": {
     "defaultMessage": "Phone",
@@ -814,6 +897,10 @@
     "defaultMessage": "Levels",
     "description": "Game Level"
   },
+  "sd4dwE": {
+    "defaultMessage": "{xp} xp",
+    "description": "club xp"
+  },
   "swkU6w": {
     "defaultMessage": "Go to Home",
     "description": "Link description"
@@ -834,6 +921,10 @@
     "defaultMessage": "{errorMessage}",
     "description": "email form helper"
   },
+  "upMbBE": {
+    "defaultMessage": "Feed",
+    "description": "Feed"
+  },
   "vChW6P": {
     "defaultMessage": "Show Leaderboard",
     "description": "Leaderboard show button"
@@ -846,9 +937,9 @@
     "defaultMessage": "Turtle",
     "description": "Game Title"
   },
-  "viQX0N": {
-    "defaultMessage": "Turtle",
-    "description": "Game Title"
+  "wdqhVV": {
+    "defaultMessage": "Create club",
+    "description": "Create a club button"
   },
   "wrdAU0": {
     "defaultMessage": "Help",
